--- a/umrobot_description/worlds/custom_door/model.config
+++ b/umrobot_description/worlds/custom_door/model.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" ?>
 <model>
-    <name>door_stand</name>
+    <name>custom_door</name>
     <version>1.0</version>
     <sdf version="1.6">model.sdf</sdf>
     <author>
